@@ -10,6 +10,7 @@ Release 8.4-dev
 * New command line options:
    -y : disables -x 1aA interpretation, thanks to crondaemon for the patch
    -I : ignore an existing hydra.restore file (dont wait for 10 seconds)
+* Upgraded hydra-svn to work with the current libsvn version
 * Fixed dpl4hydra to be able to update from the web again
 * Updated default password lists
 * The protocols vnc, xmpp, telnet, imap, nntp and pcanywhere got accidentially long sleep commands due a patch in 8.2, fixed
